[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/hud/Stats.gd" type="Script" id=1]

[node name="Stats" type="Control"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -78.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PlayerStats" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 638.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PlayerStats"]
editor/display_folded = true
margin_right = 65.0
margin_bottom = 22.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Title"]
margin_left = 4.0
margin_top = 4.0
margin_right = 61.0
margin_bottom = 18.0
text = "PLAYER STATS"

[node name="Stats" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PlayerStats"]
margin_top = 26.0
margin_right = 638.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats"]
margin_left = 4.0
margin_top = 4.0
margin_right = 634.0
margin_bottom = 59.0

[node name="PlayerStatsContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer"]
editor/display_folded = true
margin_right = 630.0
margin_bottom = 55.0
size_flags_horizontal = 3
columns = 4

[node name="LevelLabel" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_right = 37.0
margin_bottom = 14.0
text = "Level:"

[node name="Level" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_left = 41.0
margin_right = 54.0
margin_bottom = 14.0
text = "1"

[node name="ExpLabel" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_left = 58.0
margin_right = 105.0
margin_bottom = 14.0
text = "Experience:"

[node name="Exp" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_left = 109.0
margin_right = 131.0
margin_bottom = 14.0
text = "0/0"

[node name="SpeedLabel" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_top = 18.0
margin_right = 37.0
margin_bottom = 32.0
text = "Speed:"

[node name="Speed" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_left = 41.0
margin_top = 18.0
margin_right = 54.0
margin_bottom = 32.0
text = "5"

[node name="HealthLabel" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_left = 58.0
margin_top = 18.0
margin_right = 105.0
margin_bottom = 32.0
text = "Health:"

[node name="Health" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_left = 109.0
margin_top = 18.0
margin_right = 131.0
margin_bottom = 32.0
text = "25"

[node name="DefenseLabel" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_top = 36.0
margin_right = 37.0
margin_bottom = 50.0
text = "Defense:"

[node name="Defense" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_left = 41.0
margin_top = 36.0
margin_right = 54.0
margin_bottom = 50.0
text = "0"

[node name="ManaLabel" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_left = 58.0
margin_top = 36.0
margin_right = 105.0
margin_bottom = 50.0
text = "Mana:"

[node name="Mana" type="Label" parent="VBoxContainer/HBoxContainer/PlayerStats/Stats/HBoxContainer/PlayerStatsContainer"]
margin_left = 109.0
margin_top = 36.0
margin_right = 131.0
margin_bottom = 50.0
text = "5"

[node name="Buttons" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PlayerStats"]
margin_top = 93.0
margin_right = 638.0
margin_bottom = 156.0
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/PlayerStats/Buttons"]
margin_left = 4.0
margin_top = 4.0
margin_right = 634.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Speed" type="Button" parent="VBoxContainer/HBoxContainer/PlayerStats/Buttons/GridContainer"]
modulate = Color( 0.94902, 0.94902, 0.94902, 1 )
margin_right = 313.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+ SPEED"

[node name="Health" type="Button" parent="VBoxContainer/HBoxContainer/PlayerStats/Buttons/GridContainer"]
margin_left = 317.0
margin_right = 630.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+ HEALTH"

[node name="Defense" type="Button" parent="VBoxContainer/HBoxContainer/PlayerStats/Buttons/GridContainer"]
margin_top = 29.0
margin_right = 313.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+ DEFENSE"

[node name="Mana" type="Button" parent="VBoxContainer/HBoxContainer/PlayerStats/Buttons/GridContainer"]
margin_left = 317.0
margin_top = 29.0
margin_right = 630.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+ MANA"

[node name="BowStats" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( -1012, -62 )
size_flags_horizontal = 3
alignment = 1

[node name="Title" type="PanelContainer" parent="VBoxContainer/HBoxContainer/BowStats"]
editor/display_folded = true
margin_right = 55.0
margin_bottom = 22.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Title"]
margin_left = 4.0
margin_top = 4.0
margin_right = 51.0
margin_bottom = 18.0
text = "BOW STATS"

[node name="Stats" type="PanelContainer" parent="VBoxContainer/HBoxContainer/BowStats"]
margin_top = 26.0
margin_right = 638.0
margin_bottom = 156.0
size_flags_vertical = 3

[node name="BowStatsContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/BowStats/Stats"]
margin_left = 4.0
margin_top = 4.0
margin_right = 634.0
margin_bottom = 126.0
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Stats/BowStatsContainer"]
margin_right = 52.0
margin_bottom = 14.0
text = "Name:"

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Stats/BowStatsContainer"]
margin_left = 56.0
margin_right = 115.0
margin_bottom = 14.0
text = "Name of Bow"

[node name="DamageLabel" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Stats/BowStatsContainer"]
margin_top = 18.0
margin_right = 52.0
margin_bottom = 32.0
text = "Damage:"

[node name="Damage" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Stats/BowStatsContainer"]
margin_left = 56.0
margin_top = 18.0
margin_right = 115.0
margin_bottom = 32.0
text = "1"

[node name="SpeedLabel" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Stats/BowStatsContainer"]
margin_top = 36.0
margin_right = 52.0
margin_bottom = 50.0
text = "Drawspeed:"

[node name="Speed" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Stats/BowStatsContainer"]
margin_left = 56.0
margin_top = 36.0
margin_right = 115.0
margin_bottom = 50.0
text = "1"

[node name="ReloadLabel" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Stats/BowStatsContainer"]
margin_top = 54.0
margin_right = 52.0
margin_bottom = 68.0
text = "Reloadspeed:"

[node name="Reload" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Stats/BowStatsContainer"]
margin_left = 56.0
margin_top = 54.0
margin_right = 115.0
margin_bottom = 68.0
text = "1"

[node name="PiercingLabel" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Stats/BowStatsContainer"]
margin_top = 72.0
margin_right = 52.0
margin_bottom = 86.0
text = "Piercing::"

[node name="Piercing" type="Label" parent="VBoxContainer/HBoxContainer/BowStats/Stats/BowStatsContainer"]
margin_left = 56.0
margin_top = 72.0
margin_right = 115.0
margin_bottom = 86.0
text = "1"
